// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render Expenses Summary with 1 expense 1`] = `
<div
  className="page-header"
>
  <div
    className="content-container"
  >
    <div
      className="page-header__title"
    >
      Viewing 
      <span>
        1
      </span>
       
      expenses
       totalling 
      <span>
        $0.01
      </span>
    </div>
    <div
      className="page-header_actions"
    >
      <Link
        className="button"
        replace={false}
        to="/create-expense"
      >
        Add Expense
      </Link>
    </div>
  </div>
</div>
`;

exports[`should render Expenses Summary with multiple expenses 1`] = `
<div
  className="page-header"
>
  <div
    className="content-container"
  >
    <div
      className="page-header__title"
    >
      Viewing 
      <span>
        32
      </span>
       
      expenses
       totalling 
      <span>
        $7,574,245.18
      </span>
    </div>
    <div
      className="page-header_actions"
    >
      <Link
        className="button"
        replace={false}
        to="/create-expense"
      >
        Add Expense
      </Link>
    </div>
  </div>
</div>
`;
